--- a/configuration-management-service_1.2/pom.xml
+++ b/configuration-management-service_1.2/pom.xml
@@ -75,6 +75,32 @@
 			</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.example</groupId>
+			<artifactId>
+				configuration-management-service_1.1
+			</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger2</artifactId>
+        <version>3.0.0</version>
+    </dependency>
+
+    <!-- Springfox for Swagger UI -->
+    <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger-ui</artifactId>
+        <version>3.0.0</version>
+    </dependency>
+
+    <!-- Springfox for Spring Web MVC -->
+    <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-spring-web</artifactId>
+        <version>3.0.0</version>
+    </dependency>
 	</dependencies>
 
 	<build>
