--- a/demo-2/src/main/resources/application.properties
+++ b/demo-2/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=demo-2
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.enabled=true
+commands.file.path=configPushFiles.txt
+# Path to the commands file
+# Path to the known hosts file on your host machine
+server.known.hosts.path= C:\Users\Administrator\.ssh\known_hosts
+
+# SSH connection properties (optional)
+ssh.timeout.connect=30000  
+logging.level.org.apache.sshd=DEBUG
